--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
    <link href="./src/output.css" rel="stylesheet">
    <link rel="stylesheet" href="styles.css">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Social links profile</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 14px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body class="attribution bg-[hsl(0,0%,8%)]">
+<body class="attribution bg-[hsl(0,0%,8%)] min-h-screen flex justify-center items-center m-0 p-0">
 
 
-<div class="flex items-center justify-center min-h-screen">
-  <div class="container card rounded-xl bg-[hsl(0,0%,12%)] p-6 m-4">
+<div class="flex flex-col items-center justify-center  m-8 md:my-4 md:max-w-sm w-full">
+  <div class="flex flex-col container card rounded-xl bg-[hsl(0,0%,12%)] p-6">
       <div class="flex justify-center">
       <img src="assets/images/avatar-jessica.jpeg" class="rounded-full" alt="">
         </div>
   
 
       <div class="name my-5">
-        <h1 class="text-white font-bold text-2xl">Jessica Randall</h1>
+        <h1 class="text-white font-semibold text-2xl">Jessica Randall</h1>
         <p class="text-[hsl(75,94%,57%)] font-semibold mt-1">London, United Kingdom</p>
       </div>
-      <div class="description text-white">
+      <div class="description text-white font-normal">
          <p>"Front-end developer and avid reader."</p>
       </div>
   
@@ -52,14 +52,18 @@
         </a>
       </div>
   </div>
+  <div class="attribution flex flex-col md:flex-row mt-3 md:mt-0">
+    <p>
+Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    </p>
+    <p>Coded by <a href="#">Davisco</a></p> 
+   
+  </div>
 </div>
  
 
   
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Davisco</a>.
-  </div>
+  
 </body>
 </html>
