--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
   <style>
     .attribution { font-size: 14px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body class="attribution bg-[hsl(0,0%,8%)] min-h-screen flex justify-center items-center m-0 p-0">
 
 
-<div class="flex flex-col items-center justify-center  m-8 md:my-4 md:max-w-sm w-full">
+<div class="flex flex-col items-center justify-center  mx-8 md:my-4 md:max-w-sm w-full">
   <div class="flex flex-col container card rounded-xl bg-[hsl(0,0%,12%)] p-6">
       <div class="flex justify-center">
       <img src="assets/images/avatar-jessica.jpeg" class="rounded-full" alt="">
@@ -35,24 +36,24 @@
       </div>
   
       <div class="social-links text-white mt-4 flex flex-col justify-center items-center">
-        <a href="https://github.com/Dhavisco" class="social-link text-white" target="_blank" rel="noopener noreferrer">
+        <a href="#" class="social-link text-white" target="_blank" rel="noopener noreferrer">
           <span class="link">GitHub</span>
       </a>
-        <a href="https://www.frontendmentor.io/profile/Dhavisco" class="social-link" target="_blank" rel="noopener noreferrer">
+        <a href="#" class="social-link" target="_blank" rel="noopener noreferrer">
          <span class="link">Frontend Mentor</span> 
         </a>
-        <a href="https://www.linkedin.com/in/dhavisco/" class="social-link" target="_blank" rel="noopener noreferrer">
+       <a href="#" class="social-link" target="_blank" rel="noopener noreferrer">
           <span class="link">LinkedIn</span>
         </a>
-        <a href="https://twitter.com/olaniyidaviday1" class="social-link" target="_blank" rel="noopener noreferrer">
+        <a href="#" class="social-link" target="_blank" rel="noopener noreferrer">
           <span class="link">Twitter</span>
         </a>
-        <a href="https://www.instagram.com/ayomi_dave" class="social-link" target="_blank" rel="noopener noreferrer">
+        <a href="#" class="social-link" target="_blank" rel="noopener noreferrer">
           <span class="link">Instagram</span>
         </a>
       </div>
   </div>
-  <div class="attribution flex flex-col md:flex-row mt-3 md:mt-0">
+  <div class="attribution flex flex-col md:flex-row mt-3 md:mt-0 text-white">
     <p>
 Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     </p>
