--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="attribution bg-[hsl(0,0%,8%)] min-h-screen flex justify-center items-center m-0 p-0">
 
 
-<div class="flex flex-col items-center justify-center  mx-8 md:my-4 md:max-w-sm w-full">
+<div class="flex flex-col items-center justify-center  mx-8 my:0 md:my-4 md:max-w-sm w-full">
   <div class="flex flex-col container card rounded-xl bg-[hsl(0,0%,12%)] p-6">
       <div class="flex justify-center">
       <img src="assets/images/avatar-jessica.jpeg" class="rounded-full" alt="">
