--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
 
 <div class="flex flex-col items-center justify-center  mx-8 my:0 md:my-4 md:max-w-sm w-full">
-  <div class="flex flex-col container card rounded-xl bg-[hsl(0,0%,12%)] p-6">
+  <div class="flex flex-col container card rounded-xl bg-[hsl(0,0%,12%)] py-4 px-6">
       <div class="flex justify-center">
       <img src="assets/images/avatar-jessica.jpeg" class="rounded-full" alt="">
         </div>
   
 
-      <div class="name my-5">
+      <div class="name my-5 md:my-2">
         <h1 class="text-white font-semibold text-2xl">Jessica Randall</h1>
         <p class="text-[hsl(75,94%,57%)] font-semibold mt-1">London, United Kingdom</p>
       </div>
