--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body class="attribution bg-[hsl(0,0%,8%)] min-h-screen flex justify-center items-center m-0 p-0">
+<body class="attribution bg-[hsl(0,0%,8%)] ">
 
-
+<div class="min-h-screen flex justify-center items-center m-0 p-0">
 <div class="flex flex-col items-center justify-center  mx-8 my:0 md:my-4 md:max-w-sm w-full">
   <div class="flex flex-col container card rounded-xl bg-[hsl(0,0%,12%)] py-4 px-6">
       <div class="flex justify-center">
@@ -61,6 +61,8 @@ Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blan
    
   </div>
 </div>
+</div>
+
  
 
   
